--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<br />
 					<select class="inputs" id="inputUnit">
 						<option value="metric">Metric</option>
-						<option value="imperial">imperial</option>
+						<option value="imperial">Imperial</option>
 					</select>
 				</div>
 			</div>
